Tests/project2/errors/semis.flm
/* This tests for missing semicolons */

fun foo()
    begin
    bar(a, b, c) ; 
    a:= 2 + 3
    bar(c, d, e)
    end


        
